Implement /api/simulation endpoint (Still WIP)

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Database Configuration
-DATABASE_URI=postgresql://username:password@db:5432/water_balance
+DATABASE_URL=postgresql://username:password@db:5432/water_balance
 
 # API Keys
 API_KEY=your_api_key_here
