Updated .env example for app

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,9 @@ DATABASE_URL=postgresql://username:password@db:5432/water_balance
 
 # API Keys
 API_KEY=your_api_key_here
-API_URL=https://api.example.com/v1
+API_BASE_URL=https://api.example.com/v1
+API_SUFFIX=https://api.example.com/v1
+
 
 # Application Settings
 FLASK_APP=main.py
@@ -14,3 +16,5 @@ DEBUG=True
 POSTGRES_USER=username
 POSTGRES_PASSWORD=password
 POSTGRES_DB=water_balance
+
+DEFAULT_LOCATION=Warsaw
